--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     --bg: hsl(0, 0%, 5%);
     --bg-light: hsl(0, 0%, 10%);
     --text: hsl(0, 0%, 95%);
-    --text-muted: hsl(0, 0%, 70%);
+    --text-muted: hsl(0, 0%, 80%);
     --iphone: hsl(22, 92%, 55%);
     --border: 0.1rem solid var(--bg-light);
     font-size: 10px;
@@ -27,6 +27,7 @@
 
 body {
     background: url("./img/background.png");
+    background-size: fixed;
     color: var(--text);
     font-size: 1.6rem;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -39,7 +40,7 @@ section {
 }
 
 .header {
-    background-color: var(--bg);
+    background-color: rgba(0, 0, 0, 0.4);
     position: fixed;
     top: 0;
     left: 0;
@@ -97,9 +98,9 @@ section {
     border-radius: 0.9rem;
     border: var(--border);
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
-    letter-spacing: 0.1rem;
-    font-weight: bold;
     transition: 0.3s ease;
+    backdrop-filter: blur(5px);
+    background-color: rgba(255, 255, 255, 0.2);
 }
 
 .btn:hover {
@@ -109,7 +110,8 @@ section {
 
 .home-container {
     background-position: center;
-    background-size: cover;
+    background-size: fixed;
+    display: block;
 }
 
 .home-container section {
@@ -122,8 +124,6 @@ section {
     max-width: 50rem;
     margin-right: 5rem;
     flex: 1;
-    padding: 1rem;
-    animation: float 3s ease-in-out infinite;
 }
 
 .content {
@@ -194,11 +194,11 @@ section {
 .about .row .content .btn {
     display: flex;
     align-items: center;
-    text-align: right;
+    text-align: center;
     padding-right: 3rem;
     justify-content: flex-end;
     flex: 1;
-    margin-left: 40rem;
+    margin-left: 42rem;
     margin-right: 0;
 }
 
