--- a/style.css
+++ b/style.css
@@ -27,7 +27,9 @@
 
 body {
     background: url("./img/background.png");
-    background-size: fixed;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
     color: var(--text);
     font-size: 1.6rem;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
